--- a/login.css
+++ b/login.css
@@ -13,13 +13,13 @@
 
 @font-face {
   font-family: "Nunito";
-  src: url(fonts/Nunito/static/Nunito-Regular.ttf) format("truetype");
+  src: url(fonts/Nunito/Nunito-Regular.ttf) format("truetype");
   font-weight: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url(fonts/Nunito/static/Nunito-Bold.ttf) format("truetype");
+  src: url(fonts/Nunito/Nunito-Bold.ttf) format("truetype");
   font-weight: bold;
 }
 
@@ -27,31 +27,49 @@
 :root {
   --base-color: #195905;
   --base-variant: #0c3200;
-  --text-color: rgba(12, 50, 0, 1);
+
+  --text-color: #0c3200;
   --secondary-text: #195905;
+
   --primary-color: #fffaf8;
   --accent-color: #fffaf8;
-  --fiter-color: none;
-  --glassContainer-color: rgba(217, 217, 217, 0.43);
-  --input-placeholder: rgba(12, 50, 0, 1);
-  --submitBtn-bg: rgb(25, 89, 5);
+
+  --glassContainer-color: rgba(171, 171, 171, 0.43);
+  --input-container: rgba(171, 171, 171, 0.43);
+  --input-placeholder: #0c3200;
+
+  --submitBtn-bg: #195905;
+
+  --fiter-color: rgba(25, 89, 5, 0.4);
   --bg-url: url("images/light-mode-bg.svg");
+
   --theme-icon-url: url("images/light-mode-icon.svg");
+
+  --title-font-size: 1.3rem;
+  --primary-font-size: 0.7rem;
+  --secondary-font-size: 0.8rem;
 }
 
 /* darkmode variables */
 .darkmode {
   --base-color: #e5c300;
-  --base-variant: #aaaaaa;
-  --text-color: rgb(255, 255, 255);
+  --base-variant: #d9d9d9;
+
+  --text-color: #fffaf8;
   --secondary-text: #195905;
+
   --primary-color: #fffaf8;
   --accent-color: #fffaf8;
+
+  --glassContainer-color: rgba(217, 217, 217, 0.03);
+  --input-container: rgba(171, 171, 171, 0.23);
+  --input-placeholder: #fffaf8;
+
+  --submitBtn-bg: #0f1c22;
+
   --fiter-color: none;
-  --glassContainer-color: rgba(61, 61, 61, 0.43);
-  --input-placeholder: white;
-  --submitBtn-bg: rgb(0, 0, 0);
   --bg-url: url("images/dark-mode-bg.svg");
+
   --theme-icon-url: url("images/dark-mode-icon.svg");
 }
 
@@ -71,16 +89,16 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(25, 89, 5, 0.4);
+  background: var(--fiter-color);
   opacity: 0.6;
-  z-index: 0;
+  z-index: 1;
 }
 
 header,
 main,
 footer {
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 
 /* cvsu logo header */
@@ -91,8 +109,7 @@ header {
 
 .cvsu-logo img {
   margin-top: 2vh;
-  height: 17vh;
-  width: 17vh;
+  width: 7%;
 }
 
 .cvsu-logo #title {
@@ -100,13 +117,14 @@ header {
   font-weight: bold;
   margin-top: 0%;
   color: var(--base-color);
-  font-size: 1.5rem;
+  font-size: var(--title-font-size);
 }
 
 .cvsu-logo #sub-title {
   font-family: "Nunito", sans-serif;
   margin-top: -1.2%;
   color: var(--base-variant);
+  font-size: var(--primary-font-size);
 }
 
 /* theme switch */
@@ -131,21 +149,22 @@ header {
   transform: scale(1.04);
 }
 
-.theme-btn .themeIcon:first-child{
+.theme-btn .themeIcon:first-child {
   display: none;
 }
 
-.darkmode .theme-btn .themeIcon:last-child{
+.darkmode .theme-btn .themeIcon:last-child {
   display: none;
 }
 
-.darkmode .theme-btn .themeIcon:first-child{
+.darkmode .theme-btn .themeIcon:first-child {
   display: block;
 }
 
 .theme-btn img {
-  height: 100%;
-  width: 100%;
+  margin: 10%;
+  height: 80%;
+  width: 80%;
 }
 
 /* login container */
@@ -157,10 +176,12 @@ header {
 .login-container {
   justify-content: center;
   margin: auto;
-  margin-top: 1%;
-  width: 35vw;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  height: 35%;
+  width: 30%;
 
-  border-radius: 10%;
+  border-radius: 30px;
   border: 1px solid #fffaf8;
   background: var(--glassContainer-color);
   backdrop-filter: blur(21.5px);
@@ -170,9 +191,8 @@ header {
 .login-container h1 {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
-  font-size: 1.8rem;
+  font-size: var(--title-font-size);
   color: var(--text-color);
-  margin-top: 3%;
   margin-bottom: 7%;
 }
 
@@ -180,25 +200,28 @@ header {
   width: 65%;
   border-radius: 40px;
   border: 1px solid #fffaf8;
-  background: rgba(217, 217, 217, 0.43);
+  background: var(--input-container);
   backdrop-filter: blur(21.5px);
   padding: 2%;
+  padding-left: 5%;
   margin-bottom: 3%;
   color: var(--text-color);
 }
 
 .login-container input::placeholder {
+  font-family: "Nunito", sans-serif;
+  font-size: var(--primary-font-size);
   color: var(--input-placeholder);
+  opacity: 0.7;
 }
-
 
 .submitBtn {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
+  font-size: var(--secondary-font-size);
   width: 70%;
   border-radius: 30px;
   padding: 1.8%;
-  font-size: 1.1rem;
   border: none;
   background-color: var(--submitBtn-bg);
   color: white;
@@ -212,7 +235,7 @@ header {
 }
 
 .passReset {
-  font-size: 0.85rem;
+  font-size: var(--primary-font-size);
   border: none;
   background: none;
   float: right;
@@ -227,12 +250,11 @@ header {
   transform: scale(1.05);
 }
 
-
 .container #tennets {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
-  font-size: 1rem;
-  color: var(--base-color);
+  font-size: var(--secondary-font-size);
+  color: var(--base-variant);
   word-spacing: 10px;
   margin-top: 2%;
 }
@@ -258,7 +280,7 @@ header {
 }
 
 .resetContainer h1 {
-  font-size: 1.7rem;
+  font-size: var(--title-font-size);
   color: var(--text-color);
   font-family: "Poppins";
 }
@@ -274,12 +296,11 @@ header {
 
 footer {
   padding-top: 0.7%;
-  position: absolute;
   width: 100%;
 }
 
 .footerContainer p {
   text-align: center;
-  font-size: 0.8rem;
+  font-size: var(--primary-font-size);
   color: var(--text-color);
 }
