--- a/login.css
+++ b/login.css
@@ -13,14 +13,20 @@
 
 @font-face {
   font-family: "Nunito";
-  src: url(fonts/Nunito/Nunito-Regular.ttf) format("truetype");
+  src: url(fonts/Nunito/static/=Nunito-Regular.ttf) format("truetype");
   font-weight: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url(fonts/Nunito/Nunito-Bold.ttf) format("truetype");
+  src: url(fonts/Nunito/static/Nunito-Bold.ttf) format("truetype");
   font-weight: bold;
+}
+
+:root {
+  --title-font-size: 1.5rem;
+  --primary-font-size: 0.7rem;
+  --secondary-font-size: 0.8rem;
 }
 
 /* base/light mode variables*/
@@ -38,16 +44,20 @@
   --input-container: rgba(171, 171, 171, 0.43);
   --input-placeholder: #0c3200;
 
-  --submitBtn-bg: #195905;
+  --submit-btn-bg: rgba(25, 89, 5, 0.6);
+  --submit-btn-hover: rgba(25, 89, 5, 0.8);
 
-  --fiter-color: rgba(25, 89, 5, 0.4);
+  --fiter-color: rgba(25, 89, 5, 0.1);
   --bg-url: url("images/light-mode-bg.svg");
 
   --theme-icon-url: url("images/light-mode-icon.svg");
+  --theme-btn-hover: brightness(90%);
 
-  --title-font-size: 1.3rem;
-  --primary-font-size: 0.7rem;
-  --secondary-font-size: 0.8rem;
+  --text-shadow-color: 0 0 40px #d9d9d9, 0 0 40px #d9d9d9, 0 0 40px #d9d9d9;
+
+  /* #0c3200 */
+  --icon-filter: invert(15%) sepia(55%) saturate(1614%) hue-rotate(67deg)
+    brightness(92%) contrast(105%);
 }
 
 /* darkmode variables */
@@ -65,32 +75,48 @@
   --input-container: rgba(171, 171, 171, 0.23);
   --input-placeholder: #fffaf8;
 
-  --submitBtn-bg: #0f1c22;
+  --submit-btn-bg: #d1a82766;
+  --submit-btn-hover: #d1a827;
 
-  --fiter-color: none;
+  --fiter-color: #060d10;
   --bg-url: url("images/dark-mode-bg.svg");
 
   --theme-icon-url: url("images/dark-mode-icon.svg");
+  --theme-btn-hover: brightness(120%);
+
+  --text-shadow-color: #060d10;
+
+  /* #FFFAF8 */
+  --icon-filter: invert(100%) sepia(87%) saturate(253%) hue-rotate(357deg)
+    brightness(113%) contrast(101%);
+}
+
+* {
+  transition: 80ms ease;
 }
 
 body {
+  font-family: "Nunito", sans-serif;
+  font-size: 100%;
+
   margin: 0;
   height: 100vh;
   overflow: hidden;
+
   background-image: var(--bg-url);
   background-size: cover;
   background-position: center;
-  font-family: "Nunito", sans-serif;
+
+  cursor: default;
 }
 
-.bg-filter {
+.bgFilter {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: var(--fiter-color);
-  opacity: 0.6;
   z-index: 1;
 }
 
@@ -101,67 +127,85 @@ footer {
   z-index: 2;
 }
 
+*:focus {
+  outline: none;
+}
+
 /* cvsu logo header */
 header {
   text-align: center;
   justify-content: center;
 }
 
-.cvsu-logo img {
+.cvsuLogo img {
   margin-top: 2vh;
   width: 7%;
+
+  max-width: 90px;
+  max-height: 90px;
+  min-width: 67px;
+  min-height: 67px;
 }
 
-.cvsu-logo #title {
+.cvsuLogo #title {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   margin-top: 0%;
   color: var(--base-color);
   font-size: var(--title-font-size);
+
+  text-shadow: var(--text-shadow-color);
 }
 
-.cvsu-logo #sub-title {
+.cvsuLogo #subTitle {
   font-family: "Nunito", sans-serif;
-  margin-top: -1.2%;
+  margin-top: -1.2rem;
   color: var(--base-variant);
   font-size: var(--primary-font-size);
+
+  text-shadow: var(--text-shadow-color);
 }
 
 /* theme switch */
-.theme-btn {
+.themeBtn {
   position: fixed;
   top: 3vh;
   right: 2vw;
+
   height: 8vh;
   width: 8vh;
-  max-width: 71px;
   max-height: 71px;
-  min-width: 45px;
-  min-height: 45px;
+  max-width: 71px;
+  min-height: 34px;
+  min-width: 34px;
 
   border-radius: 20%;
   border: 1px solid #fffaf8;
   background: var(--glassContainer-color);
   backdrop-filter: blur(21.5px);
+
+  transition: 0.5s ease;
+
+  cursor: pointer;
 }
 
-.theme-btn:hover {
-  transform: scale(1.04);
+.themeBtn:hover {
+  filter: var(--theme-btn-hover);
 }
 
-.theme-btn .themeIcon:first-child {
+.themeBtn .themeIcon:first-child {
   display: none;
 }
 
-.darkmode .theme-btn .themeIcon:last-child {
+.darkmode .themeBtn .themeIcon:last-child {
   display: none;
 }
 
-.darkmode .theme-btn .themeIcon:first-child {
+.darkmode .themeBtn .themeIcon:first-child {
   display: block;
 }
 
-.theme-btn img {
+.themeBtn img {
   margin: 10%;
   height: 80%;
   width: 80%;
@@ -169,102 +213,135 @@ header {
 
 /* login container */
 .container {
+  display: flex;
+  align-items: center;
   justify-content: center;
-  text-align: center;
+  height: 53vh;
+  max-height: 73vh;
+
+  margin: 0;
 }
 
-.login-container {
-  justify-content: center;
+.loginContainer {
+  text-align: center;
   margin: auto;
-  margin-top: 2%;
-  margin-bottom: 2%;
-  height: 35%;
-  width: 30%;
+  width: 25rem;
+  max-width: 30rem;
 
   border-radius: 30px;
   border: 1px solid #fffaf8;
   background: var(--glassContainer-color);
   backdrop-filter: blur(21.5px);
-  padding: 3% 0.5% 5% 0.5%;
+  padding: 2.5% 0.5% 4% 0.5%;
 }
 
-.login-container h1 {
+.loginContainer h1 {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   font-size: var(--title-font-size);
   color: var(--text-color);
-  margin-bottom: 7%;
+  margin-bottom: 8%;
 }
 
-.login-container input {
+.loginContainer input {
   width: 65%;
   border-radius: 40px;
   border: 1px solid #fffaf8;
   background: var(--input-container);
   backdrop-filter: blur(21.5px);
   padding: 2%;
-  padding-left: 5%;
+  padding-left: 1em;
   margin-bottom: 3%;
   color: var(--text-color);
 }
 
-.login-container input::placeholder {
+.loginContainer input::placeholder {
   font-family: "Nunito", sans-serif;
   font-size: var(--primary-font-size);
   color: var(--input-placeholder);
   opacity: 0.7;
 }
 
+.passField {
+  position: relative;
+  margin: 0 auto;
+}
+
+.passToggle {
+  position: absolute;
+  top: 15%;
+  bottom: 15%;
+  right: 18%;
+
+  width: 5%;
+  max-width: 24px;
+  min-width: 12px;
+
+  filter: var(--icon-filter);
+
+  cursor: pointer;
+}
+
 .submitBtn {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
   font-size: var(--secondary-font-size);
-  width: 70%;
-  border-radius: 30px;
+
+  width: 73%;
+  margin-top: 2%;
   padding: 1.8%;
-  border: none;
-  background-color: var(--submitBtn-bg);
-  color: white;
-  margin-top: 5%;
-  transition: 0.5s ease;
-  border: 1px solid white;
+
+  border: 1px solid var(--base-color);
+  border-radius: 30px;
+
+  background-color: var(--submit-btn-bg);
+  color: var(--accent-color);
+
+  transition: 0.2s ease;
+  cursor: pointer;
 }
 
 .submitBtn:hover {
-  transform: scale(1.05);
+  background-color: var(--submit-btn-hover);
 }
 
-.passReset {
+.helpAndReset button {
   font-size: var(--primary-font-size);
   border: none;
   background: none;
-  float: right;
-  margin-top: 3%;
-  margin-right: 15%;
-  word-spacing: 2.5px;
   color: var(--text-color);
-  transition: 0.5s ease;
+
+  transition: 0.2s ease;
+
+  cursor: pointer;
 }
 
-.passReset:hover {
-  transform: scale(1.05);
+.helpAndReset:hover {
+  color: var(--submit-btn-hover);
 }
 
-.container #tennets {
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
-  font-size: var(--secondary-font-size);
-  color: var(--base-variant);
-  word-spacing: 10px;
-  margin-top: 2%;
+.help {
+  padding: none;
+  margin: 0;
+  margin-top: 3%;
+  margin-right: 20%;
+}
+
+.passReset {
+  padding: none;
+  margin: 0;
+  margin-top: 3%;
+  margin-left: 20%;
 }
 
 /* Reset Container */
 .resetContainer {
   justify-content: center;
+
   margin: auto;
-  margin-top: 1%;
-  width: 35%;
+  width: 40rem;
+  max-width: 30rem;
+  margin-top: 7rem;
   background-color: rgb(255, 255, 255);
   background: var(--glassContainer-color);
   backdrop-filter: blur(10px);
@@ -280,6 +357,9 @@ header {
 }
 
 .resetContainer h1 {
+  justify-content: center;
+  text-align: center;
+
   font-size: var(--title-font-size);
   color: var(--text-color);
   font-family: "Poppins";
@@ -288,19 +368,105 @@ header {
 .resetContainer p {
   justify-content: left;
   text-align: left;
+
+  font-size: var(--secondary-font-size);
+
   margin-left: 13%;
-  margin-right: 12%;
+  margin-right: 13%;
   margin-top: 8%;
   color: var(--text-color);
 }
 
 footer {
-  padding-top: 0.7%;
+  position: fixed;
+  bottom: 0;
+
+  text-align: center;
+  padding-bottom: 0.7rem;
   width: 100%;
+  text-shadow: var(--text-shadow-color);
+}
+
+.footerContainer h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: var(--secondary-font-size);
+  color: var(--base-variant);
+  word-spacing: 10px;
+
+  text-shadow: var(--text-shadow-color);
 }
 
 .footerContainer p {
-  text-align: center;
   font-size: var(--primary-font-size);
   color: var(--text-color);
+}
+
+@media (max-width: 768px) {
+  :root {
+    --container-width: 90%;
+    --input-width: 90%;
+    --btn-width: 90%;
+  }
+
+  .themeBtn {
+    height: 0.3rem;
+    width: 0.3rem;
+  }
+}
+
+@media (max-width: 390px) {
+  .cvsuLogo {
+    padding-top: 2.5rem;
+  }
+
+  .themeBtn {
+    height: 0.3vh;
+    width: 0.3vh;
+
+    margin-right: 1.5rem;
+  }
+
+  .logoText #title {
+    font-size: 1.2rem;
+  }
+
+  .logoText #subTitle {
+    padding-top: 0.5rem;
+    font-size: 0.8rem;
+  }
+
+  .loginContainer {
+    width: 90%;
+    padding: 1rem 1rem 1.5rem 1rem;
+    margin: 0 2rem 0 2rem;
+  }
+
+  .loginContainer input {
+    width: 67%;
+  }
+
+  .submitBtn {
+    width: 78%;
+  }
+
+  .passToggle {
+    top: 20%;
+    right: 16%;
+  }
+
+  .resetContainer {
+    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+    margin: 0 2rem 0 2rem;
+  }
+
+  .resetContainer h1 {
+    padding-bottom: 1rem;
+    font-size: 1rem;
+  }
+
+  .resetContainer p {
+    margin: 0;
+    font-size: 0.8rem;
+  }
 }
